# deezer-openapi

./: README.md  deezer.yaml  justfile  main.py  pyproject.toml  setup.py
.github/workflows/: python.yml
.openapi-generator/: FILES
docs/: Album.md  Albums.md  Artist.md  Artists.md  Creator.md  DefaultApi.md  Error.md  Exception.md  Genre.md  Genres.md  Playlist.md  PlaylistTracks.md  TopTracks.md  Track.md  Tracks.md
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi_client/api/: default_api.py
openapi_client/models/: __init__.py  album.py  albums.py  artist.py  artists.py  creator.py  error.py  exception.py  genre.py  genres.py  playlist.py  playlist_tracks.py  top_tracks.py  track.py  tracks.py
test/: test_album.py  test_albums.py  test_artist.py  test_artists.py  test_creator.py  test_default_api.py  test_error.py  test_exception.py  test_genre.py  test_genres.py  test_playlist.py  test_playlist_tracks.py  test_top_tracks.py  test_track.py  test_tracks.py
tests/: __init__.py  test_album.py  test_artist.py  test_playlist.py
