[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "openapi_client"
version = "1.0.0"
description = "OpenAPI3Definition 62"
readme = "README.md"
requires-python = ">= 3.8, < 4.0"
dependencies = [ "urllib3 (>=1.25.3,<3.0.0)", "python-dateutil (>=2.8.2)", "pydantic (>=2)", "typing-extensions (>=4.7.1)",]
[[project.authors]]
name = "OpenAPI Generator Community"
email = "team@openapitools.org"

[tool.mypy]
files = [ "openapi_client", "tests",]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

[project.license]
text = "NoLicense"

[project.optional-dependencies]
dev = [ "pytest (>=7.2.1)", "pytest-cov (>=2.8.1)", "tox (>=3.9.0)", "flake8 (>=4.0.0)", "types-python-dateutil (>=2.8.19.14)", "mypy (>=1.5)",]

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"
